# predictive-maintenace-system

./: .gitignore  README.md  main.py  mlflow.db  pyproject.toml
src/predictive_maintenance/: config.py  train_pipeline.py
src/predictive_maintenance/api/: main.py  schemas.py
src/predictive_maintenance/data/: loader.py  prepare_dataset.py  preprocessing.py  split.py
src/predictive_maintenance/explainability/: shap_explainer.py
src/predictive_maintenance/models/: evaluate.py  inference.py  train.py
src/predictive_maintenance/simulation/: sensor_simulator.py
tests/: test_data_pipeline.py  test_project.py  test_training.py
