[project]
name = "predictive-maintenance-system"
version = "0.1.0"
description = "Industrial predictive maintenance ML system"
requires-python = ">=3.12"

dependencies = [
    "pandas",
    "scikit-learn",
    "fastapi",
    "uvicorn",
    "pydantic",
    "shap",
    "joblib",
    "mlflow>=3.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
